Use the bottom edge of notification toast for reposition target.

When the notification popup (or toast, the terms are interchangeable) is
removed, usually the remaining notifications would move down to fill the space.

Previously, we were using the top y coordinate of the removed notification as
the target location of the oldest notification toast, but this was assuming
all the notifications have the same height, which is not true.

This CL changes the behavior to use the bottom y coordinate for the aniamtion
target location.
On some platforms with the task bar on the top of the screen, notification
toasts are aligned top down. In such case, we still have to use the top y
coordinate. GetTargetEdge handles that.

TEST=manual
BUG=679397

Change-Id: I1831d594eea0d741660142f9c5623eaa9c376476